kubernetes/apps/kubeflow-system/kubeflow/gateway/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname istio.goyangi.cloud
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  addresses:
    - value: 192.168.1.157
      type: IPAddress
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.goyangi.cloud"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.goyangi.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: goyangi-cloud-tls
            namespace: kube-system
